* array.c (rb_ary_reject_bang, rb_ary_delete_if): rejected   elements should be removed.  fixed [Bug #2545]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_8@32360 b2dd03c8-39d4-4d8f-98ff-823fe69b080e